# MLMF

./: Readme.md  readme.md
npurobocourse_sim/hector_gazebo/hector_gazebo_worlds/worlds/: empty_world.world
npurobocourse_sim/hector_quadrotor/hector_quadrotor_demo/launch/: demo.launch
npurobocourse_sim/hector_quadrotor/hector_quadrotor_demo/rviz_cfg/: demo.rviz
npurobocourse_sim/hector_quadrotor/hector_quadrotor_demo/scripts/: uav_altitude_controller.py
npurobocourse_sim/hector_quadrotor/hector_quadrotor_description/urdf/: quadrotor_base.urdf.xacro  tello.gazebo.xacro  tello.urdf.xacro
npurobocourse_sim/hector_quadrotor/hector_quadrotor_gazebo/launch/: spawn_quadrotor.launch  spawn_tello.launch
target_locate/: CMakeLists.txt  package.xml
target_locate/include/target_locate/: BoxSORT.h  EKF.h  Kalman_2D.h  PointSORT.h  TargetLocate.h  TrajectoryPredictor.h  mpc_trajectory_follower.h
target_locate/launch/: mpc_tracker.launch  multi_target_control.launch  sim_locate_demo.launch  two_drone_mpc_tracking.launch
target_locate/msg/: TrajectoryMsg.msg
target_locate/rviz/: demo_locate.rviz
target_locate/script/: multi_target_cmd.py
target_locate/src/: BoxSORT.cpp  EKF.cpp  Hungarian.cpp  KalmanTracker.cpp  Kalman_2D.cpp  PointSORT.cpp  TargetLocate.cpp  TrajectoryPredictor.cpp  mpc_trajectory_follower.cpp  sim_demo.cpp
yolov5_ros/: CMakeLists.txt
yolov5_ros/launch/: gazebo_tt.launch
yolov5_ros/src/: detect_tt.py
yolov5_ros/src/yolov5/: =3.2.2  requirements.txt  train.py
yolov5_ros/src/yolov5/data/: tello.yaml
yolov5_ros/src/yolov5/utils/: dataloaders.py  plots.py
